May-2k22-Trainings/K8s/YAMLS/gbook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gbook-ingress
#  namespace: gbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: trainings.com
    http:
      paths:
      - pathType: Exact
        path: /guest
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Exact
        path: /node
        backend:
          service:
            name: nodeport-service
            port:
              number: 8080
